# npc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  example.cast  flake.nix
.github/workflows/: build.yml  update.yml
src/: main.rs  nixos-unstable-small.json  nixos-unstable-small.txt  nixos-unstable.json  nixos-unstable.txt  nixpkgs-unstable.json  nixpkgs-unstable.txt
