[package]
name = "npc"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
anyhow = "1"
aws-config = "1"
aws-sdk-s3 = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
indicatif = "0.18"
percent-encoding = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[features]
# This feature is for generating the JSON files in `src`.
history = []
